@@ -2485,15 +2485,15 @@ int monitor_wrt54g(const char *in_dev, int initch, char *in_err, void **in_if,
 				   void *in_ext) {
     char cmdline[2048];
 
-		snprintf(cmdline, 2048, "/usr/sbin/iwpriv %s set_monitor 1", in_dev);
-		if (RunSysCmd(cmdline) < 0) {
-			snprintf(in_err, 1024, "Unable to set mode using 'iwpriv %s set_monitor 1'. "
-					 "Some custom firmware images require you to specify the origial "
-					 "device and a new dynamic device and use the iwconfig controls. "
-					 "see the README for how to configure your capture source.",
-					 in_dev);
-			return -1;
-		}
+	snprintf(cmdline, 2048, "/usr/sbin/iwpriv %s set_monitor 1", in_dev);
+	if (RunSysCmd(cmdline) < 0) {
+		snprintf(in_err, 1024, "Unable to set mode using 'iwpriv %s set_monitor 1'. "
+				 "Some custom firmware images require you to specify the origial "
+				 "device and a new dynamic device and use the iwconfig controls. "
+				 "see the README for how to configure your capture source.",
+				 in_dev);
+		return -1;
+	}
 
 	return 1;
 }
@@ -2503,15 +2503,15 @@ int unmonitor_wrt54g(const char *in_dev, int initch, char *in_err, void **in_if,
 				   void *in_ext) {
     char cmdline[2048];
 
-		snprintf(cmdline, 2048, "/usr/sbin/iwpriv %s set_monitor 0", in_dev);
-		if (RunSysCmd(cmdline) < 0) {
-			snprintf(in_err, 1024, "Unable to set mode using 'iwpriv %s set_monitor 0'. "
-					 "Some custom firmware images require you to specify the origial "
-					 "device and a new dynamic device and use the iwconfig controls. "
-					 "see the README for how to configure your capture source.",
-					 in_dev);
-			return -1;
-		}
+	snprintf(cmdline, 2048, "/usr/sbin/iwpriv %s set_monitor 0", in_dev);
+	if (RunSysCmd(cmdline) < 0) {
+		snprintf(in_err, 1024, "Unable to set mode using 'iwpriv %s set_monitor 0'. "
+				 "Some custom firmware images require you to specify the origial "
+				 "device and a new dynamic device and use the iwconfig controls. "
+				 "see the README for how to configure your capture source.",
+				 in_dev);
+		return -1;
+	}
 
 	return 1;
 }
